--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,9 +4,22 @@ html {
 body {
   min-height: 100%;
 }
+
 #main {
+  /*width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
+}
+.content {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+.time {
+  color: white;
 }
