--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,9 @@ body {
   -o-background-size: cover;
   background-size: cover;*/
 }
+#timeContainer {
+  z-index: 1000;
+}
 .content {
   position: absolute;
   top: 50%;
