--- a/views/index.html
+++ b/views/index.html
@@ -42,50 +42,48 @@
   </script>
 
   <div id="main">
-    <div id="timeContainer" class="content">
-      </div>
-      <div id="canvasContainer" class="content">
-        <canvas id="theCanvas" data-bind="attr: {width: width, height: height}"></canvas>
-      </div>
+    <div id="canvasContainer" class="mt-2 mb-2">
+      <canvas id="theCanvas" class="mx-auto d-block" data-bind="attr: {width: width, height: height}"></canvas>
+    </div>
 
     <div id="colorControl" class="container-fluid text-uppercase" style="display: none;" data-bind="with: colorPicker, visible: true"
      role="tablist" aria-multiselectable="true">
       <div class="row">
-        <span class="col-sm-4">
-          <a data-toggle="collapse" class="btn btn-time" data-bind="css: hours"
+        <span class="col">
+          <a data-toggle="collapse" class="btn btn-block" data-bind="css: hoursColor"
            data-parent="#colorControl" href="#hoursContainer" aria-expanded="true" aria-controls="hoursContainer">Hours</a>
 
           <div id="hoursContainer" class="collapse" role="tabpanel">
-            <div class="card-block">
-              <button class="btn btn-danger btn-time mb-2" data-bind="click: update.bind($data, 'hours', 'red')">RED</button>
-              <button class="btn btn-success btn-time mb-2" data-bind="click: update.bind($data, 'hours', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-time mb-2" data-bind="click: update.bind($data, 'hours', 'blue')">BLUE</button>
+            <div class="card-block mt-2">
+              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'red')">RED</button>
+              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'green')">GREEN</button>
+              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'blue')">BLUE</button>
             </div>
           </div>
         </span>
 
-        <span class="col-sm-4">
-          <a data-toggle="collapse" class="btn btn-time" data-bind="css: minutes"
+        <span class="col">
+          <a data-toggle="collapse" class="btn btn-block" data-bind="css: minutesColor"
            data-parent="#colorControl" href="#minutesContainer" aria-expanded="true" aria-controls="minutesContainer">Minutes</a>
 
           <div id="minutesContainer" class="collapse" role="tabpanel">
-            <div class="card-block">
-              <button class="btn btn-danger btn-time mb-2" data-bind="click: update.bind($data, 'minutes', 'red')">RED</button>
-              <button class="btn btn-success btn-time mb-2" data-bind="click: update.bind($data, 'minutes', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-time mb-2" data-bind="click: update.bind($data, 'minutes', 'blue')">BLUE</button>
+            <div class="card-block mt-2">
+              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'red')">RED</button>
+              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'green')">GREEN</button>
+              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'blue')">BLUE</button>
             </div>
           </div>
         </span>
 
-        <span class="col-sm-4">
-          <a data-toggle="collapse" class="btn btn-time" data-bind="css: seconds"
+        <span class="col">
+          <a data-toggle="collapse" class="btn btn-block" data-bind="css: secondsColor"
            data-parent="#colorControl" href="#secondsContainer" aria-expanded="true" aria-controls="secondsContainer">Seconds</a>
 
           <div id="secondsContainer" class="collapse" role="tabpanel">
-            <div class="card-block">
-              <button class="btn btn-danger btn-time mb-2" data-bind="click: update.bind($data, 'seconds', 'red')">RED</button>
-              <button class="btn btn-success btn-time mb-2" data-bind="click: update.bind($data, 'seconds', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-time mb-2" data-bind="click: update.bind($data, 'seconds', 'blue')">BLUE</button>
+            <div class="card-block mt-2">
+              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'red')">RED</button>
+              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'green')">GREEN</button>
+              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'blue')">BLUE</button>
             </div>
           </div>
         </span>
