--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,10 @@
 
   <script type="text/javascript">
     $(document).ready(function () {
-      var model = new ColorZones(new Renderer(), new TimeZoneService(), new ColorPicker());
+      var renderer = new Renderer();
+      var timeZoneService = new TimeZoneService(renderer.width());
+      var colorPicker = new ColorPicker();
+      var model = new ColorZones(renderer, timeZoneService, colorPicker);
       // Figure out why I need this override here...
       ko.options.useOnlyNativeEvents = true;
       ko.applyBindings(model);
@@ -42,51 +45,72 @@
   </script>
 
   <div id="main">
-    <div id="canvasContainer" class="mt-2 mb-2">
-      <canvas id="theCanvas" class="mx-auto d-block" data-bind="attr: {width: width, height: height}"></canvas>
-    </div>
+    <div id="content" class="mx-auto d-block" data-bind="style: {width: width}">
+      <div id="canvasContainer" class="mt-2 mb-2">
+        <canvas id="theCanvas" data-bind="attr: {width: width, height: height}"></canvas>
+      </div>
 
-    <div id="colorControl" class="container-fluid text-uppercase" style="display: none;" data-bind="with: colorPicker, visible: true"
-     role="tablist" aria-multiselectable="true">
-      <div class="row">
-        <span class="col">
-          <a data-toggle="collapse" class="btn btn-block" data-bind="css: hoursColor"
-           data-parent="#colorControl" href="#hoursContainer" aria-expanded="true" aria-controls="hoursContainer">Hours</a>
-
-          <div id="hoursContainer" class="collapse" role="tabpanel">
-            <div class="card-block mt-2">
-              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'red')">RED</button>
-              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'blue')">BLUE</button>
+      <div class="mb-2">
+        <div class="row">
+          <div class="col">
+            <div class="float-right">
+              <label for="opacitySlider">Opacity <span data-bind="text: opacity"></span>%</label>
+              <input id="opacitySlider" type="range" min="0" max="100" data-bind="value: opacity"/>
             </div>
           </div>
-        </span>
-
-        <span class="col">
-          <a data-toggle="collapse" class="btn btn-block" data-bind="css: minutesColor"
-           data-parent="#colorControl" href="#minutesContainer" aria-expanded="true" aria-controls="minutesContainer">Minutes</a>
-
-          <div id="minutesContainer" class="collapse" role="tabpanel">
-            <div class="card-block mt-2">
-              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'red')">RED</button>
-              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'blue')">BLUE</button>
+          <div class="col">
+            <div class="form-check no-select">
+              <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" data-bind="checked: showTimes">
+                Show all times
+              </label>
             </div>
           </div>
-        </span>
+        </div>
+      </div>
 
-        <span class="col">
-          <a data-toggle="collapse" class="btn btn-block" data-bind="css: secondsColor"
-           data-parent="#colorControl" href="#secondsContainer" aria-expanded="true" aria-controls="secondsContainer">Seconds</a>
+      <div id="colorControl" class="text-uppercase" style="display: none;" data-bind="with: colorPicker, visible: true"
+      role="tablist" aria-multiselectable="true">
+        <div class="row">
+          <span class="col">
+            <a data-toggle="collapse" class="btn btn-block" data-bind="css: hoursColor"
+            data-parent="#colorControl" href="#hoursContainer" aria-expanded="true" aria-controls="hoursContainer">Hours</a>
 
-          <div id="secondsContainer" class="collapse" role="tabpanel">
-            <div class="card-block mt-2">
-              <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'red')">RED</button>
-              <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'green')">GREEN</button>
-              <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'blue')">BLUE</button>
+            <div id="hoursContainer" class="collapse" role="tabpanel">
+              <div class="card-block mt-2">
+                <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'red')">RED</button>
+                <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'green')">GREEN</button>
+                <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'hours', 'blue')">BLUE</button>
+              </div>
             </div>
-          </div>
-        </span>
+          </span>
+
+          <span class="col">
+            <a data-toggle="collapse" class="btn btn-block" data-bind="css: minutesColor"
+            data-parent="#colorControl" href="#minutesContainer" aria-expanded="true" aria-controls="minutesContainer">Minutes</a>
+
+            <div id="minutesContainer" class="collapse" role="tabpanel">
+              <div class="card-block mt-2">
+                <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'red')">RED</button>
+                <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'green')">GREEN</button>
+                <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'minutes', 'blue')">BLUE</button>
+              </div>
+            </div>
+          </span>
+
+          <span class="col">
+            <a data-toggle="collapse" class="btn btn-block" data-bind="css: secondsColor"
+            data-parent="#colorControl" href="#secondsContainer" aria-expanded="true" aria-controls="secondsContainer">Seconds</a>
+
+            <div id="secondsContainer" class="collapse" role="tabpanel">
+              <div class="card-block mt-2">
+                <button class="btn btn-danger btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'red')">RED</button>
+                <button class="btn btn-success btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'green')">GREEN</button>
+                <button class="btn btn-primary btn-block mb-2" data-bind="click: update.bind($data, 'seconds', 'blue')">BLUE</button>
+              </div>
+            </div>
+          </span>
+        </div>
       </div>
   </div>
 </body>
