Display time zone on hover, and move rendering into requestAnimationFrame()

--- a/views/index.html
+++ b/views/index.html
@@ -46,12 +46,12 @@
 
   <div id="main">
     <div id="content" class="mx-auto d-block" data-bind="style: {width: width}">
-      <div id="canvasContainer" class="mt-2 mb-2">
+      <div id="canvasContainer" class="mb-2">
         <canvas id="theCanvas" data-bind="attr: {width: width, height: height}"></canvas>
       </div>
 
       <div class="mb-2">
-        <div class="row">
+        <div class="row text-white">
           <div class="col">
             <div class="float-right">
               <label for="opacitySlider">Opacity <span data-bind="text: opacity"></span>%</label>
