Fix error in ray casting and add options for coloring only the hover region

--- a/views/index.html
+++ b/views/index.html
@@ -53,11 +53,16 @@
             </div>
           </div>
           <div class="col">
-            <div class="form-check no-select">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" data-bind="checked: showTimes">
-                Show all times
-              </label>
+            <label class="custom-control custom-checkbox no-select">
+              <input type="checkbox" class="custom-control-input" data-bind="checked: showTimes">
+              <span class="custom-control-indicator"></span>
+              <span class="custom-control-description">Show all times</span>
+            </label>
+            <label class="custom-control custom-checkbox no-select">
+              <input type="checkbox" class="custom-control-input" data-bind="checked: colorAllZones">
+              <span class="custom-control-indicator"></span>
+              <span class="custom-control-description">Color all zones</span>
+            </label>
             </div>
           </div>
         </div>
