--- a/views/map.html
+++ b/views/map.html
@@ -1,11 +1,9 @@
 <html>
 <head>
-  <script type="text/javascript"
-   src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript"
-   src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
   </script>
-  <script type="text/javascript" src="lib/jquery.timezone-picker.js">
+  <script type="text/javascript" src="js/jquery.timezone-picker.js">
   </script>
 
   <script>
