--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,26 +4,25 @@
   </header>
 
   <div id="colorZones">
-    <renderer [(fixedWidth)]="width" [(fixedHeight)]="height" (render)="doRender($event)" (mouseOver)="onMouseOver($event)"></renderer>
+    <renderer [(fixedWidth)]="width" [(fixedHeight)]="height" (render)="doRender($event)"
+      (mouseOver)="onMouseOver($event)"></renderer>
 
-    <div class="row">
-      <div class="col">
-        <div class="float-right" id="opacityControl">
-          <label for="opacitySlider">Opacity {{opacity}}%</label>
-          <input id="opacitySlider" type="range" min="0" max="100" [(ngModel)]="opacity"
-            (ngModelChange)="updateOpacity($event)" />
-        </div>
+    <div class="controls-container">
+      <div class="opacity-control" id="opacityControl">
+        <label for="opacitySlider">Opacity {{opacity}}%</label>
+        <input id="opacitySlider" type="range" min="0" max="100" [(ngModel)]="opacity"
+          (ngModelChange)="updateOpacity($event)" />
       </div>
-      <div class="col">
-        <label class="custom-control custom-checkbox no-select" id="showTimesControl">
-          <input type="checkbox" class="custom-control-input" [(ngModel)]="showTimes">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">Show all times</span>
+      <div>
+        <label id="showTimesControl">
+          <input type="checkbox" [(ngModel)]="showTimes">
+          <span></span>
+          <span>Show all times</span>
         </label>
-        <label class="custom-control custom-checkbox no-select" id="showColorsControl">
-          <input type="checkbox" class="custom-control-input" [(ngModel)]="colorAllZones">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description">Color all zones</span>
+        <label id="showColorsControl">
+          <input type="checkbox" [(ngModel)]="colorAllZones">
+          <span></span>
+          <span>Color all zones</span>
         </label>
       </div>
     </div>
@@ -32,7 +31,7 @@
   </div>
 
   <footer>
-    <span><a href="https://github.com/mcnedward/solar-system"><i class="fab fa-github"></i></a></span>
+    <span><a href="https://github.com/mcnedward/color-zones"><i class="fab fa-github"></i></a></span>
     <span><a href="https://www.linkedin.com/in/mcnedward"><i class="fab fa-linkedin"></i></a></span>
     <label><a href="https://edwardmcnealy.com">&copy; Edward McNealy {{copyrightDate}}</a></label>
   </footer>
