--- a/src/app/color-picker/color-picker.component.scss
+++ b/src/app/color-picker/color-picker.component.scss
@@ -2,5 +2,10 @@
 
 #colorControl {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+time-container {
+  margin: 0 1rem;
 }
